--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "test-website-1",
-  "version": "0.1.0",
+  "name": "deepnimma.com",
+  "version": "1.0.0a",
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
